--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -2,14 +2,14 @@
 	<p id="notice"><%= notice %></p>
 <% end %>
 
-<h2>Your Cart</h2>
+<h2>Tu Cart</h2>
 <table>
 	<% @cart.line_items.each do |item| %>
 		<tr>	
 			<td><%= item.quantity %> &times;</td> 
 			<td><%= item.product.title %></td>
 			<td class="item_price"><%= number_to_currency(item.total_price) %></td>
-			<td><%= link_to "Delete", item, method: :delete %></td>
+			<td><%= link_to "Borrar", item, method: :delete %></td>
 		</tr>
 	<% end %>
 
@@ -19,4 +19,4 @@
 	</tr>
 </table>
 
-<%= button_to "Empty cart", @cart, method: :delete, data: { confirm: "Are you sure?" } %>
+<%= button_to "Vaciar cart", @cart, method: :delete, data: { confirm: "Estás seguro?" } %>
