--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -15,52 +15,52 @@
  */
 
 #banner {
-	background: #9c9;
-	padding: 10px;
-	border-bottom: 2px solid;
-	font: small-caps 40px/40px "Times New Roman", serif;
-	color: #282;
-	text-align: center;
+  background: #D84800;
+  padding: 10px;
+  border-bottom: 2px solid;
+  font: small-caps 40px/40px "Times New Roman", serif;
+  color: white;
 
-	img {
-		float: left;
-	}
+  img {
+    float: left;
+    margin: 0 15px;
+  }
 }
 #notice {
-	color: #000 !important;
-	border: 2px solid red;
-	padding: 1em;
-	margin-bottom: 2em;
-	background-color: #f0f0f0;
-	font: bold smaller sans-serif;
+  color: #000 !important;
+  border: 2px solid red;
+  padding: 1em;
+  margin-bottom: 2em;
+  background-color: #f0f0f0;
+  font: bold smaller sans-serif;
 }
 #columns {
-	background: #141;
+  background: #D84800;
 
-	#main {
-		margin-left: 17em;
-		padding: 1em;
-		background: white;
-	}
-	#side {
-		float: left;
-		padding: 1em 2em;
-		width: 13em;
-		background: #141;
-		h3{
-			color: #fff;
-		}
-		ul {
-			padding: 0;
-		li {
-			list-style: none;
-			a {
-				color: #bfb;
-				font-size: small;
-				}
-			}
-		}
-	}
+  #main {
+    margin-left: 17em;
+    padding: 1em;
+    background: white;
+  }
+  #side {
+    float: left;
+    padding: 1em 2em;
+    width: 13em;
+    background: #D84800;
+    h3{
+      color: #fff;
+    }
+    ul {
+      padding: 0;
+    li {
+      list-style: none;
+      a {
+        color: #bfb;
+        font-size: small;
+        }
+      }
+    }
+  }
 }
 
 
