--- a/app/views/carts/edit.html.erb
+++ b/app/views/carts/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @cart %> |
-<%= link_to 'Back', carts_path %>
+<%= link_to 'Ver', @cart %> |
+<%= link_to 'Atras', carts_path %>
