--- a/app/views/carts/new.html.erb
+++ b/app/views/carts/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New cart</h1>
+<h1>Nuevo Cart</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Back', carts_path %>
+<%= link_to 'Atras', carts_path %>
