--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Depot</title>
+  <title>The Comic Bookstore</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
@@ -9,17 +9,17 @@
 <body class='<%= controller.controller_name %>'>
 	<div id="banner">
 		<%= image_tag("logo.png") %>
-		<%= @page_title || "Pragmatic Bookshelf" %>
+		The Comic Bookstore
 	</div>
 	<div id="columns">
 		<div id="side">
 			<ul>
-				<li><a href="http://www....">Home</a></li>
-				<li><a href="http://www..../faq">Questions</a></li>
-				<li><a href="http://www..../news">News</a></li>
-				<li><a href="http://www..../contact">Contact</a></li>
+				<li><a href="/">Inicio</a></li>
+				<li><a href="">Preguntas</a></li>
+				<li><a href="">Noticias</a></li>
+				<li><a href="">Contacto</a></li>
 			</ul>
-			<h3>Date and Time: <%= DateTime.now %></h3>
+			<h3>Día y Hora: <%= DateTime.now %></h3>
 		</div>
 		<div id="main">
 			<%= yield %>
