--- a/app/views/store/index.html.erb
+++ b/app/views/store/index.html.erb
@@ -2,10 +2,10 @@
 	<p id="notice"><%= notice %></p>
 <% end %>
 
-<h1>Your Pragmatic Catalog</h1>
+<h1>Tu catálogo</h1>
 
 <% if session[:counter] >= 5 %>
-	<h3>Hi!, You view the catalog <%= pluralize(session[:counter], "time") %> </h3> 
+	<h3>Has visto el catálogo por <%= session[:counter]%> veces</h3> 
 <% end %>
 
 
@@ -15,12 +15,12 @@
 			<div class="entry">
 				<%= image_tag(product.image_url) %>
 				<h3><%= product.title %></h3>
-				<%= sanitize(product.description) %>
+				<p><%= sanitize(product.description) %></p>
 				<div class="price_line">
 					<span class="price">
 						<%= number_to_currency(product.price, precision: 2, separator: ".") %>
 					</span>
-					<%= button_to 'Add to Cart', line_items_path(product_id: product) %>
+					<%= button_to 'Agregar al carrito', line_items_path(product_id: product) %>
 				</div>
 			</div>
 		<% end %>
